# sum_harness_instructional

./: CMakeLists.txt  README.md  benchmark.cpp  plot_3vars.py  plot_3vars_savefig.py  sample_data_3vars.csv  sum_direct.cpp  sum_indirect.cpp  sum_vector.cpp
